--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-jwt:1.0.10.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.7'
+	runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.10.7'
+	runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.10.7'
+	runtime 'io.jsonwebtoken:jjwt-jackson:0.10.7'
 	implementation 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
